add information content

--- a/information for food.html
+++ b/information for food.html
@@ -3,8 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css"  href="information for food.css">
 </head>
 <body>
 
+	<section>
+	    <div class="mainbody">
+	        <div class="main1">
+	        	<div class="title-alignment">
+	            	<h2>食品名称</h2>
+	            	<span>
+	            		<a href="#reviews" class="reviews">查看评论</a>
+	            	</span>
+	        	</div>
+	            <div class="mainimg">
+	            	<img src="p/IMG_20180607_171723.JPG" class="mainimg1">
+	            </div>
+	        </div>
+	         <div class="main2">
+	         	<div class="columns">
+	           		<form>
+	           			<div class="search-filed">
+	           				<input type="text" placeholder="输入食物名称">
+	           				<input type="submit" name="" value="搜索">
+	           			</div>
+	           			<span>
+	           				<h3><i>美食简介</i></h3>
+	           			</span>
+	           			<div class="information">
+	           				<p>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
+	           			</div>
+	           		</form>
+	           	</div>
+	      	</div>  
+	    </div> 
+	    <div class="maylike">
+	    	<span>
+	    		<a href="">你可能还喜欢</a>
+	    		<div class="otherfood">
+	    			<div class="food1">
+	    				<a href="">
+	    					<img src="p/IMG_20180607_171723.JPG">
+	    				</a>
+	    			</div>
+	    			<div class="food2">
+	    				<a href="">
+	    					<img src="p/IMG_20180607_171723.JPG">
+	    				</a>
+	    			</div>
+	    			<div class="food3">
+	    				<a href="">
+	    					<img src="p/IMG_20180607_171723.JPG">
+	    				</a>
+	    			</div>
+	    		</div>
+	    	</span>
+	    </div> 
+	    <div class="reviewsplace">
+	    	<a name="reviews">评论区</a>
+	    	<div class="otherreviews">
+	    		<div class="reviews1">
+	    			<div class="hisname1">
+	    				<img src="p/00000000000000000000000000000000.jpg">
+	    				<span>
+	    					<a href="">游客1</a>
+	    				</span>
+	    			</div>
+	    			<div class="hisreview1">
+	    				<p class="hisreviews1">xxxxxxxxxxxxxxxxxxxxxxxxx</p>
+	    			</div>
+	    			<div class="hisname2">
+	    				<img src="p/00000000000000000000000000000000.jpg">
+	    				<span>
+	    					<a href="">游客2</a>
+	    				</span>
+	    			</div>
+	    			<div class="hisreview2">
+	    				<p class="hisreviews2">xxxxxxxxxxxxxxxxxxxxxxxxx</p>
+	    			</div>
+	    		</div>
+	    	</div>
+	    	<div class="myreviews">
+	    		<textarea cols="50" rows="20px" placeholder="留下你的评论"></textarea>
+	    		<input type="submit" name="" value="提交" style="height: 30px">
+	    	</div>
+	    </div>
+	</section>  
 </body>
 </html>
